# rust-tss-fapi

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  build.rs
.github/workflows/: cargo-workflow.yaml  ci.yaml
benches/: fapi_benchmark.rs
docs/: crates.io-README.md
docs/html/: redir.html
examples/: 1_get_random.rs  2_sign_and_verify.rs  3_auth_callback.rs
examples/data/: .gitignore  fapi-config.json
examples/data/profiles/: P_ECCP256SHA256.json  P_RSA2048SHA256.json
src/: algorithm_id.rs  callback.rs  context.rs  error.rs  flags.rs  lib.rs  locking.rs  marshal.rs  memory.rs  types.rs  version.rs
src/fapi_sys/: constants.rs  mod.rs
tests/: 01_version_test.rs  02_get_info_test.rs  03_provision_test.rs  04_get_random_test.rs  05_key_test.rs  06_encrypt_decrypt_test.rs  07_signature_test.rs  08_nv_test.rs  09_policy_test.rs  10_sealed_object_test.rs  11_prc_test.rs  12_duplicate_test.rs  13_authorize_policy_test.rs  14_certificate_test.rs  15_description_test.rs  16_app_data_test.rs  17_change_auth_test.rs  18_get_tcti_test.rs  19_multithread_test.rs  20_get_poll_handles_test.rs
tests/common/: callback.rs  crypto.rs  mod.rs  param.rs  random.rs  setup.rs  tempfile.rs  utils.rs
tests/data/: fapi-config.json.template
tests/data/fapi-config/: profiles
tests/data/keys/: ca_key_ecc.pem  ca_key_rsa.pem  key_ecc_256.pem
tests/data/policies/: pol_action.json  pol_duplicate.json  pol_or.json  pol_signed_ecc.json  pol_signed_rsa.json
tests/data/x509/: x509-cert.pem
tools/codecov/: code-coverage.sh
tools/docker/: Makefile  docker.mk
tools/docker/swtpm/: Makefile  docker-compose.yml  swtpm.Dockerfile  swtpm.mk
tools/docker/swtpm/src/: entry-point.sh
tools/docker/tests/: Makefile  docker-compose.snapshot.yml  docker-compose.stable.yml  docker-compose.unstable.yml  docker-compose.yml  tests.Dockerfile
tools/docker/tests/src/: shutdown_swtpm.c  test-runner.sh
tools/libtpms/: libtpms-test-runner.sh
