[package]
name = "tss2-fapi-rs"
version = "0.14.0"
edition = "2024"
rust-version = "1.85"
description = "Provides a Rust interface to the TSS2.0 Feature API (FAPI)"
license = "BSD-3-Clause"
authors = ["Daniel Trick <daniel.trick@sit.fraunhofer.de>"]
readme = "docs/crates.io-README.md"
repository = "https://github.com/tpm2-software/rust-tss-fapi/"

[features]
default = ["locking"]
locking = []
full_locking = ["locking"]

[dependencies]
json = "0.12.4"
log = "0.4.32"

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3.33"
regex = "1.12.4"

[dev-dependencies]
const-random = "0.1.18"
digest = "0.11.3"
env_logger = "0.11.10"
function_name = "0.3.0"
hex = "0.4.3"
memory-stats = "1.2.0"
p256 = "=0.14.0-rc.12"
rand = "0.10.1"
rand_chacha = "0.10.0"
regex = "1.12.4"
rsa = "=0.10.0-rc.18"
serial_test = "3.5.0"
sha2 = "0.11.0"
uuid = "1.23.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fapi_sys_have_fn_DigestAndSign)'] }
